--- a/task/index.html
+++ b/task/index.html
@@ -113,10 +113,10 @@
                                         <span class="new-btn span">New!</span>
                                     </button>
                                 </div>
-                                <div style="padding-bottom: 0.875rem;">
+                                <div style="padding-bottom: 0.875rem;" class="natural-skin-div">
                                     <span class="baner-span-content">All Natural <br>Skin Remedies.</span>
                                 </div>
-                                <div style="padding-bottom: 1.75rem;">
+                                <div style="padding-bottom: 1.75rem;" class="natural-skin-sub-div">
                                     <p class="baner-span-subcontent">
                                         A healthier you from the inside out. We’ve sourced the cleanest ingredients to
                                         create a
